--- a/src/components/VideoFeed/index.css
+++ b/src/components/VideoFeed/index.css
@@ -1,6 +1,11 @@
 .feed-pad-top {
   width: 100%;
 }
+html[data-scroll-direction="horizontal"] .feed-pad-top {
+  height: 100%;
+  width: unset;
+  flex-shrink: 0;
+}
 .feed {
   width: 100%;
   height: 100%;
